@@ -67,7 +67,12 @@
 		<?php echo lang_get( 'filename' ) ?>
 	</td>
 	<td>
-		<?php echo file_get_display_name( $v_filename ) ?>
+		<?php
+			$t_href = '<a href="file_download.php?file_id='.$v_id.'&amp;type=doc">';
+			echo $t_href;
+			print_file_icon( $v_filename );
+			echo '</a>&nbsp;' . $t_href . file_get_display_name( $v_filename ) . '</a>';
+		?>
 	</td>
 </tr>
 <tr>
